improving coverage and fixing issues